[package]
name = "aoc"
version = "0.1.0"
authors = ["Wojtek <woj.lass@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1"
path = "src/tasks/1.rs"

[[bin]]
name = "2"
path = "src/tasks/2.rs"

[[bin]]
name = "3"
path = "src/tasks/3.rs"

[[bin]]
name = "4"
path = "src/tasks/4.rs"

[[bin]]
name = "5"
path = "src/tasks/5.rs"

[[bin]]
name = "6"
path = "src/tasks/6.rs"
